art-cluster/pipelines/config/argocd/project/art-ci/ocp-build-data-validator/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: el-event-listener-validator
  namespace: art-ci
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: event-listener-validator
spec:
  clusterIP: 172.30.254.187
  ipFamilies:
    - IPv4
  ports:
    - name: http-listener
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: http-metrics
      protocol: TCP
      port: 9000
      targetPort: 9000
  internalTrafficPolicy: Cluster
  clusterIPs:
    - 172.30.254.187
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: event-listener-validator
