art-cluster/pipelines/config/argocd/project/art-ci/ocp-build-data-validator/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: el-event-listener-validator
  namespace: art-ci
spec:
  host: el-event-listener-validator-art-ci.apps.artc2023.pc3z.p1.openshiftapps.com
  to:
    kind: Service
    name: el-event-listener-validator
    weight: 100
  port:
    targetPort: http-listener
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
